# egui3.0

crates/egui/src/: menu.rs  ui.rs  widget_text.rs
crates/egui/src/containers/: panel.rs
crates/egui/src/widgets/: skeleton.rs
crates/egui/src/widgets/text_edit/: builder.rs
crates/egui/tests/: test_frame.rs
crates/epaint/src/text/: text_layout.rs  text_layout_types.rs
examples/code_editor/: Cargo.toml
examples/code_editor/src/: main.rs
