[package]
name = "code_editor"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
eframe = { workspace = true, features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

egui = { workspace = true, features = [
    "callstack",
    "log",
    "rayon",
] }

syntect = "5.0"

[lints]
workspace = true
